--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,9 +34,9 @@
           desplegable: true %>
         <%= opcion_menu 'Listado de Proyectos', 
           cor1440_gen.proyectosfinancieros_path, desplegable: true %>
-        <%= opcion_menu "Conteo por actividad de proyecto", 
+        <%= opcion_menu "Conteo por actividad de marco lógico", 
           cor1440_gen.contar_actividades_path, desplegable: true %>
-        <%= opcion_menu "Conteo por beneficiario y actividad de proyecto", 
+        <%= opcion_menu "Conteo por beneficiario y actividad de marco lógico", 
           cor1440_gen.contar_actividades_beneficiarios_path, desplegable: true %>
         <%= opcion_menu 'Medición de indicadores', 
           cor1440_gen.mindicadorespf_path, desplegable: true %>
