--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
           cor1440_gen.contar_actividades_beneficiarios_path, desplegable: true %>
         <%= opcion_menu 'Medición de indicadores', 
           cor1440_gen.mindicadorespf_path, desplegable: true %>
-        <%= opcion_menu 'Organizaciones Sociales', sip.actoressociales_path,
+        <%= opcion_menu 'Organizaciones Sociales', sip.orgsociales_path,
           desplegable: true %>
         <%= opcion_menu 'Participantes', 
           sip.personas_path, desplegable: true %>
