--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,7 @@
  * file per style scope.
  *
  *= require sivel2_gen/application.css
+ *= require cor1440_gen/application.css
  *= require_tree .
  *= require_self
  */
