--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,14 @@
           <%= opcion_menu 'Conteo de victimizaciones individuales', 
             sivel2_gen.conteos_victimizaciones_path,
             desplegable: true %>
+          <%= opcion_menu "Graficar victimizaciones individuales", 
+            sivel2_gen.graficar_victimizaciones_individuales_path,
+            'data-turbo' => false,
+            desplegable: true %>
+          <%= opcion_menu 'Mapa de victimizaciones por departamento', 
+            sivel2_gen.mapadepvic_path,
+            'data-turbo' => false,
+            desplegable: true %>
         <% end %>
       <% end %>
 
