--- a/app/views/usuarios/_filtro_habilitado.html.erb
+++ b/app/views/usuarios/_filtro_habilitado.html.erb
@@ -1,7 +1,7 @@
 <%= f.input :bushabilitado,
   collection: ['SI', 'NO', 'Todos'],
   label: false,
-  selected: Sip::ModeloHelper.poromision(params, :bushabilitado),
+  selected: Msip::ModeloHelper.poromision(params, :bushabilitado),
   input_html: {
     class: 'chosen-select',
     'data-enviarautomatico' => '',
