--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -113,9 +113,9 @@
         <% end %>
       <% end %>
       <%= opcion_menu "Salir #{current_usuario.nusuario}", 
-        main_app.sign_out_path %>
+        main_app.termina_sesion_path %>
     <% else %>
-      <%= opcion_menu 'Iniciar Sesión', main_app.new_usuario_session_path %> 
+      <%= opcion_menu 'Iniciar Sesión', main_app.iniciar_sesion_path %> 
     <% end %>
   <% end %>
 <% end %>
