--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -113,7 +113,7 @@
         <% end %>
       <% end %>
       <%= opcion_menu "Salir #{current_usuario.nusuario}", 
-        main_app.termina_sesion_path %>
+        main_app.terminar_sesion_path %>
     <% else %>
       <%= opcion_menu 'Iniciar Sesión', main_app.iniciar_sesion_path %> 
     <% end %>
