--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -124,7 +124,7 @@
   Datos de <a href='http://asomcauca.org/'>ASOM</a><br>
   Sistema de información con fuentes de 
   <a href='https://github.com/pasosdeJesus/si_asom/'>código abierto</a> 
-  desarrollado por <a href='http://www.pasosdeJesus.org' target='_blank'>Pasos de Jesús</a>. 2023. 
+  desarrollado por <a href='http://www.pasosdeJesus.org' target='_blank'>Pasos de Jesús</a>. <%= Date.today.year %>.
   </span></p>
 <% end %>
 
